# voxel-adventure

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.zed/: debug.json
editor/: CMakeLists.txt
editor/src/: cursors.cpp  cursors.h  editor.cpp  editor.h  main.cpp  palette.cpp  palette.h  tool.cpp  tool.h
editor/src/tools/: draggable-tool.cpp  draggable-tool.h  paint-brush.cpp  paint-brush.h  tools.h  voxel-brush.cpp  voxel-brush.h
editor/src/tools/shared/: brush-kernel.cpp  brush-kernel.h
libs/: CMakeLists.txt
libs/vxng/: CMakeLists.txt
libs/vxng/include/vxng/: camera.h  geometry.h  orbit-camera.h  renderer.h  scene.h  vxng-pub.h  vxng.h
libs/vxng/src/: geometry.cpp  geometry.h  gl-util.cpp  gl-util.h  renderer.cpp  scene.cpp  util.h  vxng-pub.cpp
libs/vxng/src/camera/: camera.cpp  orbit-camera.cpp
libs/vxng/src/glsl/: fullscreen.frag.cpp  fullscreen.vert.cpp  shaders.h
libs/vxng/src/scene/: camera.cpp  camera.h  chunk.cpp  chunk.h  orbit-camera.cpp  orbit-camera.h  scene.cpp
libs/vxng/src/wgsl/: chunk.wgsl.cpp  fullscreen.wgsl.cpp  shaders.h
